Fixed minor issue

--- a/prebuilt/index.html
+++ b/prebuilt/index.html
@@ -65,10 +65,10 @@ a {
     <h1 class="title">Homebrew Launcher</h1>
     <div class="links">
       <br />
-      <a class="install" href="exploit.html?install">Install</a>
+      <a class="install" href="./pegaswitch/exploit/index.html?install">Install</a>
       <br />
       <br />
-      <a class="run" href="exploit.html?run"><b>Run</b></a>
+      <a class="run" href="./pegaswitch/exploit/index.html?run"><b>Run</b></a>
     </div>
   </body>
 </html>
